--- a/src/app/my-applications/iot-devices/iot-device-detail/iot-device-detail.component.html
+++ b/src/app/my-applications/iot-devices/iot-device-detail/iot-device-detail.component.html
@@ -70,8 +70,110 @@
                 </ng-template>
             </div>
         </div>
-    </div>
 
+        <ng-container *ngIf="device.type === 'LORAWAN' && device.lorawanSettings">
+            <div class="col-12 py-4">
+                <div class="col-12 col-sm-4">
+                    <h4>{{ 'IOTDEVICE.LORA.DEVEUI' | translate }}</h4>
+                </div>
+                <div class="col-12 pt-2 col-sm-8">
+                    <p>{{device.lorawanSettings.devEUI}}</p>
+                </div>
+            </div>
+
+            <div class="col-12 py-4">
+                <div class="col-12 col-sm-4">
+                    <h4>{{ 'IOTDEVICE.LORA.serviceProfileID' | translate }}</h4>
+                </div>
+                <div class="col-12 pt-2 col-sm-8">
+                    <p>{{device.lorawanSettings?.serviceProfileID}}</p>
+                </div>
+            </div>
+
+            <div class="col-12 py-4">
+                <div class="col-12 col-sm-4">
+                    <h4>{{ 'IOTDEVICE.LORA.deviceProfileID' | translate }}</h4>
+                </div>
+                <div class="col-12 pt-2 col-sm-8">
+                    <p>{{device.lorawanSettings?.deviceProfileID}}</p>
+                </div>
+            </div>
+
+            <div class="col-12 py-4">
+                <div class="col-12 col-sm-4">
+                    <h4>{{ 'IOTDEVICE.LORA.activationType' | translate }}</h4>
+                </div>
+                <div class="col-12 pt-2 col-sm-8">
+                    <p>{{device.lorawanSettings?.activationType}}</p>
+                </div>
+            </div>
+
+            <div class="col-12 py-4">
+                <div class="col-12 col-sm-4">
+                    <h4>{{ 'IOTDEVICE.LORA.OTAA' | translate }}</h4>
+                </div>
+                <div class="col-12 pt-2 col-sm-8">
+                    <p>{{device.lorawanSettings?.OTAA}}</p>
+                </div>
+            </div>
+            
+            <div *ngIf="device.lorawanSettings.OTAA" class="col-12 py-4">
+                <div class="col-12 col-sm-4">
+                    <h4>{{ 'IOTDEVICE.LORA.OTAAapplicationKey' | translate }}</h4>
+                </div>
+                <div class="col-12 pt-2 col-sm-8">
+                    <p>{{device.lorawanSettings?.OTAAapplicationKey}}</p>
+                </div>
+            </div>
+
+            <div *ngIf="!device.lorawanSettings.OTAA">
+                <div class="col-12 py-4">
+                    <div class="col-12 col-sm-4">
+                        <h4>{{ 'IOTDEVICE.LORA.devAddr' | translate }}</h4>
+                    </div>
+                    <div class="col-12 pt-2 col-sm-8">
+                        <p>{{device.lorawanSettings?.devAddr}}</p>
+                    </div>
+                </div>
+    
+                <div class="col-12 py-4">
+                    <div class="col-12 col-sm-4">
+                        <h4>{{ 'IOTDEVICE.LORA.networkSessionKey' | translate }}</h4>
+                    </div>
+                    <div class="col-12 pt-2 col-sm-8">
+                        <p>{{device.lorawanSettings?.activationType}}</p>
+                    </div>
+                </div>
+    
+                <div class="col-12 py-4">
+                    <div class="col-12 col-sm-4">
+                        <h4>{{ 'IOTDEVICE.LORA.applicationSessionKey' | translate }}</h4>
+                    </div>
+                    <div class="col-12 pt-2 col-sm-8">
+                        <p>{{device.lorawanSettings?.applicationSessionKey}}</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col-12 py-4">
+                <div class="col-12 col-sm-4">
+                    <h4>{{ 'IOTDEVICE.LORA.ISDISABLED' | translate }}</h4>
+                </div>
+                <div class="col-12 pt-2 col-sm-8">
+                    <p>{{device.lorawanSettings?.isDisabled}}</p>
+                </div>
+            </div>
+
+            <div class="col-12 py-4">
+                <div class="col-12 col-sm-4">
+                    <h4>{{ 'IOTDEVICE.LORA.skipFCntCheck' | translate }}</h4>
+                </div>
+                <div class="col-12 pt-2 col-sm-8">
+                    <p>{{device.lorawanSettings?.skipFCntCheck}}</p>
+                </div>
+            </div>
+        </ng-container>
+    </div>
     <ng-container *ngIf="device.type">
         <div class="col-12 py-4">
             <div class="col-12 col-sm-4">
