Add styling datatarget button

--- a/src/app/my-applications/application/application.component.html
+++ b/src/app/my-applications/application/application.component.html
@@ -11,7 +11,7 @@
         </div>
         <div class="ml-auto d-flex">
           <button class='btn btn-primary' type="button" [routerLink]="['datatarget-list', application.name]"
-            routerLinkActive="active" class="application-link">datatarget</button>
+            routerLinkActive="active" class="btn btn-primary">{{ 'APPLICATION.DATATARGET-SHOW' | translate }}</button>
         </div>
       </div>
       <div class="col-xs-12 mb-5 application-table-header">
