--- a/src/app/admin/users/user-list/user-table/user-table-row/user-table-row.component.html
+++ b/src/app/admin/users/user-list/user-table/user-table-row/user-table-row.component.html
@@ -1,5 +1,5 @@
 <td class="position-relative">
-    <a [routerLink]="['user-detail', user.id]" routerLinkActive="active" class="application-link">
+    <a [routerLink]="[user.id]" routerLinkActive="active" class="application-link">
         {{user.name}}</a>
 </td>
 <td class="position-relative">
