IOT-44: Permission table

--- a/src/app/navbar/global-admin/global-admin.component.html
+++ b/src/app/navbar/global-admin/global-admin.component.html
@@ -13,14 +13,14 @@
             </a>
         </li>
         <li class="nav-item py-2">
-            <a routerLink="/admin/usergroups" routerLinkActive="active" class="nav-link pl-5 position-relative rounded">
-                Brugergrupper
+            <a routerLink="/admin/permissions" routerLinkActive="active" class="nav-link pl-5 position-relative rounded">
+                {{'NAV.PERMISSIONS' | translate}}
             </a>
         </li>
         <li class="nav-item py-2">
             <a routerLink="/admin/organisations" routerLinkActive="active"
                 class="nav-link pl-5 position-relative rounded">
-                Organisation
+                {{'NAV.ORGANISATIONS' | translate}}
             </a>
         </li>
     </ul>
