--- a/src/app/admin/organisation/organisation-list/organisation-list.component.html
+++ b/src/app/admin/organisation/organisation-list/organisation-list.component.html
@@ -1,6 +1,6 @@
 <div class="px-5 py-4">
     <div class="row mb-5">
-        <app-top-bar [sort]="sort" [pageLimit]="pageLimit" [title]="'NAV.ORGANISATION' | translate"
+        <app-top-bar [sort]="sort" [pageLimit]="pageLimit" [title]="'NAV.ORGANISATIONS' | translate"
             [ctaLabel]="'FORM.CREATE-NEW-ORGANISATION' | translate" [ctaRouterLink]="'new-organisation'"
             (updatePageLimit)="updatePageLimit($event)" (selectedSortChange)="changeSort($event)"></app-top-bar>
     </div>
