--- a/src/app/my-applications/iot-devices/iot-device-detail/iot-device-detail.component.html
+++ b/src/app/my-applications/iot-devices/iot-device-detail/iot-device-detail.component.html
@@ -83,7 +83,7 @@
 
             <div class="col-12 py-4">
                 <div class="col-12 col-sm-4">
-                    <h4>{{ 'IOTDEVICE.LORA.serviceProfileID' | translate }}</h4>
+                    <h4>{{ 'IOTDEVICE.LORA.SERVICEPROFILEID' | translate }}</h4>
                 </div>
                 <div class="col-12 pt-2 col-sm-8">
                     <p>{{device.lorawanSettings?.serviceProfileID}}</p>
@@ -92,7 +92,7 @@
 
             <div class="col-12 py-4">
                 <div class="col-12 col-sm-4">
-                    <h4>{{ 'IOTDEVICE.LORA.deviceProfileID' | translate }}</h4>
+                    <h4>{{ 'IOTDEVICE.LORA.DEVICEPROFILEID' | translate }}</h4>
                 </div>
                 <div class="col-12 pt-2 col-sm-8">
                     <p>{{device.lorawanSettings?.deviceProfileID}}</p>
@@ -101,7 +101,7 @@
 
             <div class="col-12 py-4">
                 <div class="col-12 col-sm-4">
-                    <h4>{{ 'IOTDEVICE.LORA.activationType' | translate }}</h4>
+                    <h4>{{ 'IOTDEVICE.LORA.ACTIVATIONTYPE' | translate }}</h4>
                 </div>
                 <div class="col-12 pt-2 col-sm-8">
                     <p>{{device.lorawanSettings?.activationType}}</p>
@@ -119,7 +119,7 @@
             
             <div *ngIf="device.lorawanSettings.OTAA" class="col-12 py-4">
                 <div class="col-12 col-sm-4">
-                    <h4>{{ 'IOTDEVICE.LORA.OTAAapplicationKey' | translate }}</h4>
+                    <h4>{{ 'IOTDEVICE.LORA.OTAAAPPLICATIONKEY' | translate }}</h4>
                 </div>
                 <div class="col-12 pt-2 col-sm-8">
                     <p>{{device.lorawanSettings?.OTAAapplicationKey}}</p>
@@ -129,7 +129,7 @@
             <div *ngIf="!device.lorawanSettings.OTAA">
                 <div class="col-12 py-4">
                     <div class="col-12 col-sm-4">
-                        <h4>{{ 'IOTDEVICE.LORA.devAddr' | translate }}</h4>
+                        <h4>{{ 'IOTDEVICE.LORA.DEVADDR' | translate }}</h4>
                     </div>
                     <div class="col-12 pt-2 col-sm-8">
                         <p>{{device.lorawanSettings?.devAddr}}</p>
@@ -138,7 +138,7 @@
     
                 <div class="col-12 py-4">
                     <div class="col-12 col-sm-4">
-                        <h4>{{ 'IOTDEVICE.LORA.networkSessionKey' | translate }}</h4>
+                        <h4>{{ 'IOTDEVICE.LORA.NETWORKSESSIONKEY' | translate }}</h4>
                     </div>
                     <div class="col-12 pt-2 col-sm-8">
                         <p>{{device.lorawanSettings?.activationType}}</p>
@@ -147,7 +147,7 @@
     
                 <div class="col-12 py-4">
                     <div class="col-12 col-sm-4">
-                        <h4>{{ 'IOTDEVICE.LORA.applicationSessionKey' | translate }}</h4>
+                        <h4>{{ 'IOTDEVICE.LORA.APPLICATIONSESSIONKEY' | translate }}</h4>
                     </div>
                     <div class="col-12 pt-2 col-sm-8">
                         <p>{{device.lorawanSettings?.applicationSessionKey}}</p>
@@ -166,7 +166,7 @@
 
             <div class="col-12 py-4">
                 <div class="col-12 col-sm-4">
-                    <h4>{{ 'IOTDEVICE.LORA.skipFCntCheck' | translate }}</h4>
+                    <h4>{{ 'IOTDEVICE.LORA.SKIPFCNTCHECK' | translate }}</h4>
                 </div>
                 <div class="col-12 pt-2 col-sm-8">
                     <p>{{device.lorawanSettings?.skipFCntCheck}}</p>
