IOT-44: Users: GlobalAdmin

--- a/src/app/admin/users/user-list/user-table/user-table-row/user-table-row.component.html
+++ b/src/app/admin/users/user-list/user-table/user-table-row/user-table-row.component.html
@@ -6,7 +6,7 @@
     <p>{{user.email}}</p>
 </td>
 <td class="position-relative">
-    <p>{{user.permissions}}</p>
+    <p>{{((user.permissions | isGlobalAdmin) ? 'USERS.GLOBAL_ADMIN.TRUE' : 'USERS.GLOBAL_ADMIN.FALSE') | translate}}</p>
 </td>
 <td class="position-relative">
     <p>
