--- a/src/app/admin/permission/permission-edit/permission-edit.component.html
+++ b/src/app/admin/permission/permission-edit/permission-edit.component.html
@@ -1,1 +1,52 @@
-<p>permission-edit works!</p>
+<script src="bower_components/angular-bootstrap-multiselect/dist/angular-bootstrap-multiselect.min.js"></script>
+<app-form-header [backButton]="backButton" [title]="title"></app-form-header>
+<form (ngSubmit)="onSubmit()" class="os2-form p-3 mt-4">
+    <div *ngIf="errorMessages" class="error-messages p-3">
+        <ul class="mb-0">
+            <li *ngFor="let error of errorMessages">
+                {{error}}
+            </li>
+        </ul>
+    </div>
+
+    <div class="row mb-5">
+        <div class="form-group mt-3 col-12">
+            <label class="form-label" for="name">{{'QUESTION.GIVE-PERMISSION-NAME' | translate}}</label>*
+            <input type="text" class="form-control" id="name" name="name"
+                [placeholder]="'QUESTION.GIVE-PERMISSION-NAME-PLACEHOLDER' | translate" maxlength="50" required
+                [(ngModel)]="permission.name"
+                [ngClass]="{'is-invalid' : formFailedSubmit && errorFields.includes('name'), 'is-valid' : formFailedSubmit && !errorFields.includes('name')}">
+        </div>
+    </div>
+
+    <div class="form-group mt-3 col-12">
+        <label class="form-label" for="name">{{'QUESTION.CHOOSE-USERS' | translate}}</label>*
+        <div class="col-6">
+            <select id="userIds" name="userIds" class="custom-select" multiple [(ngModel)]="permission.userIds">
+                <option *ngFor="let user of users" [value]="user.id" [selected]="isActive(user.id)">
+                    {{user.name}}</option>
+            </select>
+        </div>
+    </div>
+
+    <div *ngIf="permission.level != 'GlobalAdmin'">
+        <div class="form-group mt-3 col-12">
+            <label class="form-label" for="name">{{'QUESTION.CHOOSE-ORGANIZATION' | translate}}</label>*
+            <select id="organizationId" class="form-select" name="organizationId"
+                [(ngModel)]="permission.organizationId" required [value]="permission.organizationId"
+                [ngClass]="{'is-invalid' : formFailedSubmit && errorFields.includes('organizationId'), 'is-valid' : formFailedSubmit && !errorFields.includes('organizationId')}">
+                <option *ngFor="let org of organisations" [value]="org.id"
+                    [selected]="org.id === permission.organizationId">
+                    {{org.name}}</option>
+            </select>
+        </div>
+    </div>
+
+    <!-- TODO: Select application -->
+    <!-- TODO: Select type -->
+
+    <div class="form-group mt-5">
+        <button (click)="routeBack()" class="btn btn-light" type="button">{{ 'GEN.CANCEL' | translate}}</button>
+        <button class="btn btn-dark ml-2" type="submit">{{ 'PERMISSION.SAVE' | translate}}</button>
+    </div>
+</form>
