--- a/src/app/shared/form/form-body-datatarget/form-body-datatarget.component.html
+++ b/src/app/shared/form/form-body-datatarget/form-body-datatarget.component.html
@@ -87,11 +87,12 @@
                       <mat-label>{{'QUESTION.DATATARGET.SELECT-PAYLOADDECODER' | translate}}</mat-label>
                       <mat-select matNativeControl
                         name="payloadDecoderId"
-                        [(value)]="element.payloadDecoderId">
-                        <mat-option *ngFor="let payloadDecoder of payloadDecoders" [value]="payloadDecoder.id">
+                        [(ngModel)]="element.payloadDecoderId"
+                        [value]="element.payloadDecoderId">
+                        <option *ngFor="let payloadDecoder of payloadDecoders" [value]="payloadDecoder.id">
                           {{payloadDecoder.name}}
-                        </mat-option>
-                      </mat-select> 
+                        </option>
+                      </select> 
                     </mat-form-field>
                   </div>
                 </td>
