--- a/src/app/shared/form/form-body-datatarget/form-body-datatarget.component.html
+++ b/src/app/shared/form/form-body-datatarget/form-body-datatarget.component.html
@@ -25,17 +25,103 @@
         [ngClass]="{'is-invalid' : formFailedSubmit && errorFields.includes('url'), 'is-valid' : formFailedSubmit && !errorFields.includes('url')}">
     </div>
   </div>
+    <div class="row mb-5">
+        <div class="form-group mt-3 col-12">
+            <label class="form-label" for="datatarget">{{'QUESTION.GIVE-DATATARGET-TIMEOUT' | translate}}</label>*
+            <input 
+            type="number" 
+            class="form-control" 
+            id="datatarget" 
+            name="datatarget" 
+            required
+            [(ngModel)]="datatarget.timeout" 
+            step="1" 
+            min="0" 
+            max="100000" 
+            maxlength="7" 
+            (keyup)="onCoordinateKey($event)"
+            [ngClass]="{'is-invalid' : formFailedSubmit && errorFields.includes('datatarget'), 'is-valid' : formFailedSubmit && !errorFields.includes('datatarget')}">
+        </div>
+      </div>
+      <div *ngIf="datatargetid === 0">
+        <h4>Efter oprettelse af dit data target dette parres det med en payload decoder og iot-devices</h4>
+      </div>
+      <div class="container row" style="margin-top: 5%" *ngIf="datatargetid > 0">
+        <a (click)="addRow()" class="btn btn-secondary">{{'QUESTION.ADD-RELATIONS' | translate}}</a>
+        <ng-container *ngIf="devices && payloadDecoders && payloadDeviceData?.length > 0">
+          <table class="table table-striped table-bordered">    
+            <tbody>    
+              <tr *ngFor="let element of payloadDeviceData; let i = index;" [attr.data-index]="i">        
+                <td>    
+                  <div class="row">
+                    <mat-form-field appearance="fill">
+                      <mat-label>Iot-Devices</mat-label>
+                      <mat-select 
+                        multiple
+                        name="devices"
+                        [(ngModel)]="element.devices"
+                        [value]="element.devices">
+                        <mat-select-trigger>
+                          {{devices.values.name ? devices[0].name : ''}}
+                          <span *ngIf="devices.length > 1" class="example-additional-selection">
+                            (+{{devices.values.length - 1}} {{devices.length === 2 ? 'other' : 'others'}})
+                          </span>
+                        </mat-select-trigger>
+                        <mat-option *ngFor="let device of devices" [value]="device.id">{{device.name}}</mat-option>
+                      </mat-select>
+                    </mat-form-field>
+                  </div>
+                </td>    
+                <td>    
+                  <div class="row">
+                    <mat-form-field appearance="fill">
+                      <mat-label>{{'QUESTION.SELECT-PAYLOADDECODER' | translate}}</mat-label>
+                      <select matNativeControl
+                        name="payloadDecoderId"
+                        [(ngModel)]="element.payloadDecoderId"
+                        [value]="element.payloadDecoderId">
+                        <option *ngFor="let payloadDecoder of payloadDecoders" [value]="payloadDecoder.id">
+                          {{payloadDecoder.name}}
+                        </option>
+                      </select> 
+                    </mat-form-field>
+                  </div>
+                </td>
+                <td (click)="deleteRow(i)">    
+                  <i class="fa fa-trash fa-2x">delete row</i>    
+                </td>    
+              </tr>      
+            </tbody>    
+          </table>    
+        </ng-container>    
+      </div>
+      <!-- <div class="row">
+        <mat-form-field appearance="fill">
+          <mat-label>Iot-Devices</mat-label>
+          <mat-select [formControl]="deviceFormControl" multiple>
+            <mat-select-trigger>
+              {{devices.values.name ? devices[0].name : ''}}
+              <span *ngIf="devices.length > 1" class="example-additional-selection">
+                (+{{devices.values.length - 1}} {{devices.length === 2 ? 'other' : 'others'}})
+              </span>
+            </mat-select-trigger>
+            <mat-option *ngFor="let device of devices" [value]="device.id">{{device.name}}</mat-option>
+          </mat-select>
+        </mat-form-field>
+      </div> -->
 
-  <div class="row mb-5">
-    <div class="form-group mt-3 col-12">
-      <label class="form-label" for="datatarget">{{'QUESTION.GIVE-DATATARGET-TIMEOUT' | translate}}</label>*
-      <input type="number" class="form-control" id="datatarget" name="datatarget" required
-        [(ngModel)]="datatarget.timeout" step="1" min="0" max="100000" maxlength="7" (keyup)="onCoordinateKey($event)"
-        [ngClass]="{'is-invalid' : formFailedSubmit && errorFields.includes('datatarget'), 'is-valid' : formFailedSubmit && !errorFields.includes('datatarget')}">
-    </div>
-  </div>
-  <div class="form-group mt-5">
-    <button (click)="routeBack()" class="btn btn-secondary" type="button">{{ 'GEN.CANCEL' | translate}}</button>
-    <button class="btn btn-primary ml-2" type="submit">{{ submitButton }}</button>
-  </div>
+      <!-- <div class="row">
+        <mat-form-field appearance="fill">
+          <mat-label>{{'QUESTION.SELECT-PAYLOADDECODER' | translate}}</mat-label>
+          <mat-select [formControl]="payloadDecoderFormControl">
+            <mat-option *ngFor="let payloadDecoder of payloadDecoders" [value]="payloadDecoder.id">{{payloadDecoder.name}}</mat-option>
+          </mat-select>
+        </mat-form-field>
+      </div> -->
+
+
+    <div class="form-group mt-5">
+        <button (click)="routeBack()" class="btn btn-light" type="button">{{ 'GEN.CANCEL' | translate}}</button>
+        <button class="btn btn-dark ml-2" type="submit">{{ submitButton }}</button>
+      </div>
 </form>
