--- a/src/app/shared/form/form-body-datatarget/form-body-datatarget.component.html
+++ b/src/app/shared/form/form-body-datatarget/form-body-datatarget.component.html
@@ -59,8 +59,8 @@
                       <mat-select 
                         multiple
                         name="devices"
-                        [compareWith]="compare"
-                        [(value)]="element.devices">
+                        [(ngModel)]="element.devices"
+                        [value]="element.devices">
                         <mat-select-trigger>
                           {{devices.values.name ? devices[0].name : ''}}
                           <span *ngIf="devices.length > 1" class="example-additional-selection">
@@ -76,13 +76,14 @@
                   <div class="row">
                     <mat-form-field appearance="fill">
                       <mat-label>{{'QUESTION.SELECT-PAYLOADDECODER' | translate}}</mat-label>
-                      <mat-select matNativeControl
+                      <select matNativeControl
                         name="payloadDecoderId"
-                        [(value)]="element.payloadDecoderId">
-                        <mat-option *ngFor="let payloadDecoder of payloadDecoders" [value]="payloadDecoder.id">
+                        [(ngModel)]="element.payloadDecoderId"
+                        [value]="element.payloadDecoderId">
+                        <option *ngFor="let payloadDecoder of payloadDecoders" [value]="payloadDecoder.id">
                           {{payloadDecoder.name}}
-                        </mat-option>
-                      </mat-select> 
+                        </option>
+                      </select> 
                     </mat-form-field>
                   </div>
                 </td>
