--- a/src/app/shared/form/form-body-datatarget/form-body-datatarget.component.html
+++ b/src/app/shared/form/form-body-datatarget/form-body-datatarget.component.html
@@ -59,8 +59,8 @@
                       <mat-select 
                         multiple
                         name="devices"
-                        [(ngModel)]="element.devices"
-                        [value]="element.devices">
+                        [compareWith]="compare"
+                        [(value)]="element.devices">
                         <mat-select-trigger>
                           {{devices.values.name ? devices[0].name : ''}}
                           <span *ngIf="devices.length > 1" class="example-additional-selection">
@@ -76,14 +76,13 @@
                   <div class="row">
                     <mat-form-field appearance="fill">
                       <mat-label>{{'QUESTION.SELECT-PAYLOADDECODER' | translate}}</mat-label>
-                      <select matNativeControl
+                      <mat-select matNativeControl
                         name="payloadDecoderId"
-                        [(ngModel)]="element.payloadDecoderId"
-                        [value]="element.payloadDecoderId">
-                        <option *ngFor="let payloadDecoder of payloadDecoders" [value]="payloadDecoder.id">
+                        [(value)]="element.payloadDecoderId">
+                        <mat-option *ngFor="let payloadDecoder of payloadDecoders" [value]="payloadDecoder.id">
                           {{payloadDecoder.name}}
-                        </option>
-                      </select> 
+                        </mat-option>
+                      </mat-select> 
                     </mat-form-field>
                   </div>
                 </td>
@@ -95,31 +94,6 @@
           </table>    
         </ng-container>    
       </div>
-      <!-- <div class="row">
-        <mat-form-field appearance="fill">
-          <mat-label>Iot-Devices</mat-label>
-          <mat-select [formControl]="deviceFormControl" multiple>
-            <mat-select-trigger>
-              {{devices.values.name ? devices[0].name : ''}}
-              <span *ngIf="devices.length > 1" class="example-additional-selection">
-                (+{{devices.values.length - 1}} {{devices.length === 2 ? 'other' : 'others'}})
-              </span>
-            </mat-select-trigger>
-            <mat-option *ngFor="let device of devices" [value]="device.id">{{device.name}}</mat-option>
-          </mat-select>
-        </mat-form-field>
-      </div> -->
-
-      <!-- <div class="row">
-        <mat-form-field appearance="fill">
-          <mat-label>{{'QUESTION.SELECT-PAYLOADDECODER' | translate}}</mat-label>
-          <mat-select [formControl]="payloadDecoderFormControl">
-            <mat-option *ngFor="let payloadDecoder of payloadDecoders" [value]="payloadDecoder.id">{{payloadDecoder.name}}</mat-option>
-          </mat-select>
-        </mat-form-field>
-      </div> -->
-
-
     <div class="form-group mt-5">
         <button (click)="routeBack()" class="btn btn-light" type="button">{{ 'GEN.CANCEL' | translate}}</button>
         <button class="btn btn-dark ml-2" type="submit">{{ submitButton }}</button>
