--- a/src/app/admin/permission/permission-edit/permission-edit.component.html
+++ b/src/app/admin/permission/permission-edit/permission-edit.component.html
@@ -20,10 +20,20 @@
     </div>
 
     <div class="form-group mt-3 col-12">
+        <label class="form-label" for="name">{{'QUESTION.CHOOSE-PERMISSION-TYPE' | translate}}</label>*
+        <select id="level" class="form-select" name="level" [(ngModel)]="permission.level" required
+            [value]="permission.organizationId" [disabled]="isEditMode"
+            [ngClass]="{'is-invalid' : formFailedSubmit && errorFields.includes('organizationId'), 'is-valid' : formFailedSubmit && !errorFields.includes('organizationId')}">
+            <option *ngFor="let level of allowedLevels()" [value]="level" [selected]="level === permission.level">
+                {{level}}</option>
+        </select>
+    </div>
+
+    <div class="form-group mt-3 col-12">
         <label class="form-label" for="name">{{'QUESTION.CHOOSE-USERS' | translate}}</label>*
         <div class="col-6">
             <select id="userIds" name="userIds" class="custom-select" multiple [(ngModel)]="permission.userIds">
-                <option *ngFor="let user of users" [value]="user.id" [selected]="isActive(user.id)">
+                <option *ngFor="let user of users" [value]="user.id" [selected]="isUserPartOfPermission(user.id)">
                     {{user.name}}</option>
             </select>
         </div>
@@ -34,7 +44,9 @@
             <label class="form-label" for="name">{{'QUESTION.CHOOSE-ORGANIZATION' | translate}}</label>*
             <select id="organizationId" class="form-select" name="organizationId"
                 [(ngModel)]="permission.organizationId" required [value]="permission.organizationId"
-                [ngClass]="{'is-invalid' : formFailedSubmit && errorFields.includes('organizationId'), 'is-valid' : formFailedSubmit && !errorFields.includes('organizationId')}">
+                [disabled]="isEditMode"
+                [ngClass]="{'is-invalid' : formFailedSubmit && errorFields.includes('organizationId'), 'is-valid' : formFailedSubmit && !errorFields.includes('organizationId')}"
+                (ngModelChange)="organizationChanged($event)">
                 <option *ngFor="let org of organisations" [value]="org.id"
                     [selected]="org.id === permission.organizationId">
                     {{org.name}}</option>
@@ -42,8 +54,21 @@
         </div>
     </div>
 
+    <div *ngIf="isOrganizationAdministrationPermission()">
+        <div class="form-group mt-3 col-12">
+            <label class="form-label" for="name">{{'QUESTION.CHOOSE-APPLICATIONS' | translate}}</label>*
+            <div class="col-6">
+                <select id="applicationIds" name="applicationIds" class="custom-select" multiple [(ngModel)]="permission.applicationIds">
+                    <option *ngFor="let app of applications" [value]="app.id"
+                        [selected]="isApplicationPartOfPermission(app.id)">
+                        {{app.name}}</option>
+                </select>
+            </div>
+        </div>
+    </div>
+
+
     <!-- TODO: Select application -->
-    <!-- TODO: Select type -->
 
     <div class="form-group mt-5">
         <button (click)="routeBack()" class="btn btn-light" type="button">{{ 'GEN.CANCEL' | translate}}</button>
