Styling af lister

--- a/src/app/admin/organisation/organisation-detail/organisation-detail.component.html
+++ b/src/app/admin/organisation/organisation-detail/organisation-detail.component.html
@@ -24,8 +24,8 @@
                 {{ 'ORGANISATION.DETAIL.APPLICATIONS' | translate }}
             </div>
             <div>
-                <app-applications-table [applications]="applications" (deleteApplication)="deleteApplication($event)">
-                </app-applications-table>
+                <!-- <app-applications-table [applications]="applications" (deleteApplication)="deleteApplication($event)">
+                </app-applications-table> -->
             </div>
         </div>
     </div>
